# world-builder-audit

./: .gitignore  CHECKS.md  README.md  audit.py  build_lifecycle_rubric.py  lifecycle_rubric.yaml  pyproject.toml  rubric.yaml  world_generation_lifecycle.md
.claude/skills/gym-audit/: SKILL.md
scripts/: README.md  _common.py  floor_checks.py  lint_and_golden.py  r1_load_task.py  run_all.py  s01_objective.py  s02_goals.py  s03_subgoals.py  s04_edges.py  s05_action_matrix.py  s06_rewards.py  s07b_skeleton.py  s08_hydrate.py  s08_visual_and_lint.py
viewer/: app.js  index.html  server.py  style.css
