[project]
name = "world-builder-audit"
version = "0.1.0"
description = "Standalone audit toolkit for procedural world-builder gyms (rubric + deterministic scripts + viewer)."
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "markdown-it-py>=3.0",
]
authors = [
  { name = "Patronus AI" },
]
license = "Proprietary"
readme = "README.md"

[project.scripts]
world-builder-audit = "audit:main"
